Starting to work on abstract classes for the compose elemts that work with docker stack deploy

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     compile 'com.google.code.findbugs:jsr305:2.0.3'
     compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
-
+    compile "com.google.guava:guava:$guavaVersion"
 
     // https://mvnrepository.com/artifact/junit/junit
     testCompile group: 'junit', name: 'junit', version: "$junitVersion"
