--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     apt "com.google.auto.value:auto-value:$autoValueVersion"
 
     compile 'com.google.code.findbugs:jsr305:2.0.3'
+    compile "com.fasterxml.jackson.datatype:jackson-datatype-guava:$jacksonVersion"
     compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
     compile "com.google.guava:guava:$guavaVersion"
