--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/junit/junit
     testCompile group: 'junit', name: 'junit', version: "$junitVersion"
+    testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
     testCompile "com.google.guava:guava:$guavaVersion"
     testCompileOnly "com.google.auto.value:auto-value:$autoValueVersion"
     testApt "com.google.auto.value:auto-value:$autoValueVersion"
