--- a/src/test/resources/fixtures/v3/docker-compose_services.yml
+++ b/src/test/resources/fixtures/v3/docker-compose_services.yml
@@ -3,5 +3,21 @@ version: "3"
 services:
   foo:
     image: redis
+    deploy:
+      replicas: 1
+      update_config:
+        parallelism: 2
+        delay: 10s
+      restart_policy:
+        condition: on-failure
+    networks:
+      - frontend
+      - backend
   bar:
     image: tomcat
+    deploy:
+      replicas: 6
+    networks:
+      - frontend
+      - backend
+
