--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,9 @@
 pre:
         - sudo apt-get update
         - sudo apt-get install gradle-4.0
+
+dependencies:
+        override:
+                - chmod +x gradlew
+                - ./gradlew dependencies
+
