--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,14 @@ sudo: false
 jdk:
   - oraclejdk8
 
+before_script:
+  - chmod +x gradlew
+
 script:
-  - ./gradlew --info build
+  - ./gradlew check
+  - ./gradlew build
+  - ./gradlew codeCoverageReport
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
