--- a/build.gradle
+++ b/build.gradle
@@ -47,13 +47,15 @@ dependencies {
 task codeCoverageReport(type: JacocoReport) {
     executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
 
+    sourceSets sourceSets.main
+
     subprojects.each {
         sourceSets it.sourceSets.main
     }
 
     reports {
         xml.enabled true
-        xml.destination "${buildDir}/reports/jacoco/report.xml"
+        xml.setDestination(new File("${buildDir}/reports/jacoco/report.xml"))
         html.enabled false
         csv.enabled false
     }
