--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,12 @@ dependencies {
     compileOnly "com.google.auto.value:auto-value:$autoValueVersion"
     apt "com.google.auto.value:auto-value:$autoValueVersion"
 
-    compile 'com.google.code.findbugs:jsr305:2.0.3'
+    compile "com.google.code.findbugs:jsr305:$findbugsVersion"
     compile "com.fasterxml.jackson.datatype:jackson-datatype-guava:$jacksonVersion"
     compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
     compile "com.google.guava:guava:$guavaVersion"
+    compile "com.spotify:docker-client:$spotifyDockerClientVersion"
 
     // https://mvnrepository.com/artifact/junit/junit
     testCompile group: 'junit', name: 'junit', version: "$junitVersion"
